--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,3 +1,35 @@
-// Place all the styles related to the tasks controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+tr {
+  vertical-align: top;
+}
+
+td > a, #new, #edit, #show {
+  color: #212121;
+  &:visited {
+    color: #212121;
+  }
+  &:hover {
+    color: #fff;
+    background-color: #000;
+  }
+  margin-top: 28px;
+  text-transform: uppercase;
+  font-weight: 700;
+  text-align: center;
+  padding: 0 10px 0;
+  text-decoration: none;
+  box-shadow: 0px 2px 4.85px 0.15px rgba(33, 33, 33, 0.35);
+  border-radius: 22px;
+  border: 1px solid transparent;
+}
+
+.show {
+  background-color: lightgreen;
+}
+
+.edit {
+  background-color: yellow;
+}
+
+.delete {
+  background-color: red;
+}
