--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,9 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th>Complete</th>
+      <th></th>
+      <th>task</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,12 +14,11 @@
   <tbody>
     <% @tasks.each do |task| %>
       <tr>
-        <td><%= task.title %></td>
-        <td><%= task.body %></td>
         <td><%= task.complete %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= task.title %></td>
+        <td><%= link_to 'S', task, class: "show" %></td>
+        <td><%= link_to 'E', edit_task_path(task), class: "edit" %></td>
+        <td><%= link_to 'D', task, method: :delete, data: { confirm: 'Are you sure?' }, class: "delete" %></td>
       </tr>
     <% end %>
   </tbody>
