--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -14,7 +14,12 @@
   <tbody>
     <% @tasks.each do |task| %>
       <tr>
-        <td><%= task.complete %></td>
+        <td><%= check_box_tag 'complete', task.id, task.complete,
+                data: {
+                  remote: true,
+                  url: url_for(action: :toggle, id: task.id),
+                  method: "POST"
+                } %></td>
         <td><%= task.title %></td>
         <td><%= link_to 'S', task, class: "show" %></td>
         <td><%= link_to 'E', edit_task_path(task), class: "edit" %></td>
